: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/08_JavaScript的ES6中实现继承/01_构造函数的类方法.html
+++ b/02-JavaScript/02-JavaScript高级/08_JavaScript的ES6中实现继承/01_构造函数的类方法.html
@@ -13,7 +13,7 @@
       this.age = age
     }
 
-    // 构造函数的类方法（静态方法）
+    // 添加到 Person 对象本身的方法就是构造函数的类方法（静态方法）
     Person.say = function () {
       console.log('人类会唱歌')
     }
