: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/08_JavaScript的ES6中实现继承/01_构造函数的类方法.html
+++ b/02-JavaScript/02-JavaScript高级/08_JavaScript的ES6中实现继承/01_构造函数的类方法.html
@@ -18,7 +18,7 @@
       console.log('人类会唱歌')
     }
 
-    // 添加到 Person 构造函数原型上的方法就称为实例方法。
+    // 添加到 Person 原型上的方法就称为实例方法。
     Person.prototype.eating = function () {
       console.log('人类吃饭')
     }
