: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/08_JavaScript的ES6中实现继承/05_类的混入.html
+++ b/02-JavaScript/02-JavaScript高级/08_JavaScript的ES6中实现继承/05_类的混入.html
@@ -8,6 +8,19 @@
 </head>
 <body>
   <script>
+    class Animal {
+      running() {
+      }
+    }
+
+    class Flyer {
+      flying() {
+      }
+    }
+
+    class Bird extends Animal {
+    }
+
 
   </script>
 </body>
