: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/11_Object类.html
+++ b/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/11_Object类.html
@@ -8,8 +8,7 @@
 </head>
 <body>
   <script>
-    console.dir(window)
-    console.log(window instanceof Object) // true
+    console.log(new Object())
   </script>
 </body>
 </html>
