--- a/02-JavaScript/02-JavaScript高级/08_JavaScript的ES6中实现继承/01_构造函数的类方法.html
+++ b/02-JavaScript/02-JavaScript高级/08_JavaScript的ES6中实现继承/01_构造函数的类方法.html
@@ -18,6 +18,9 @@
       console.log('人类会唱歌')
     }
 
+    // 添加到 Person 对象本身的属性就是构造函数的类属性（静态属性）
+    Person.country = "中国"
+
     // 添加到 Person 原型上的方法就称为实例方法。
     Person.prototype.eating = function () {
       console.log('人类吃饭')
@@ -25,6 +28,8 @@
 
     var p1 = new Person('John', 25)
     Person.say()
+    console.log(Person.country)
+
   </script>
 </body>
 </html>
