: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/08_JavaScript的ES6中实现继承/02_ES6中的类.html
+++ b/02-JavaScript/02-JavaScript高级/08_JavaScript的ES6中实现继承/02_ES6中的类.html
@@ -35,6 +35,8 @@
     Person.say()
     console.log(Person.country)
 
+    console.log(p1.__proto__ == Person.prototype) // true
+
   </script>
 </body>
 </html>
