: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/08_JavaScript的ES6中实现继承/03_ES6中类中定义访问器方法.html
+++ b/02-JavaScript/02-JavaScript高级/08_JavaScript的ES6中实现继承/03_ES6中类中定义访问器方法.html
@@ -26,7 +26,8 @@
     }
 
     let p1 = new Person("John", 25);
-    console.log(p1.name);
+    p1.name = "许大仙"
+    console.log(p1.name); // 许大仙
   </script>
 </body>
 </html>
