--- a/02-JavaScript/02-JavaScript高级/08_JavaScript的ES6中实现继承/05_类的混入.html
+++ b/02-JavaScript/02-JavaScript高级/08_JavaScript的ES6中实现继承/05_类的混入.html
@@ -8,19 +8,21 @@
 </head>
 <body>
   <script>
-    class Animal {
-      running() {
-      }
-    }
+    /* 传统方式将数组中的元素提取到变量中 */
+    var arr = [1, 2, 3, 4]
 
-    class Flyer {
-      flying() {
-      }
-    }
+    var a = arr[0]
+    var b = arr[1]
+    var c = arr[2]
+    var d = arr[3]
 
-    class Bird extends Animal {
-    }
+    console.log(a, b, c, d) // 1 2 3 4
 
+    /* 传统方式通过 . 将对象中的数据提取到变量中 */
+    var obj = {name: "张三", age: 18}
+    var name = obj.name
+    var age = obj.age
+    console.log(name, age) // 张三 18
 
   </script>
 </body>
