: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/09_ES6其他知识补充/03_let和const的暂时性死区.html
+++ b/02-JavaScript/02-JavaScript高级/09_ES6其他知识补充/03_let和const的暂时性死区.html
@@ -16,6 +16,15 @@
     let message = "Hello World"
     foo()
 
+    /* 暂时性死区形成之后，在该区域内的这个标识符不能被访问。 */
+    function bar() {
+      console.log(message) // Uncaught ReferenceError: Cannot access 'message' before initialization
+
+      let message = "baz"
+    }
+
+    bar()
+
   </script>
 </body>
 </html>
