--- a/02-JavaScript/02-JavaScript高级/09_ES6其他知识补充/06_let和const的应用场景.html
+++ b/02-JavaScript/02-JavaScript高级/09_ES6其他知识补充/06_let和const的应用场景.html
@@ -9,16 +9,17 @@
 <body>
 
   <button class="btn">按钮1</button>
-  <button class="btn">按钮1</button>
-  <button class="btn">按钮1</button>
+  <button class="btn">按钮2</button>
+  <button class="btn">按钮3</button>
 
   <script>
     const btnEls = document.querySelectorAll(".btn")
-    btnEls.forEach(btn => {
+    for (let i = 0; i < btnEls.length; i++) {
+      let btn = btnEls[i]
       btn.addEventListener("click", function () {
-        console.log(this.textContent)
+        console.log(`点击了${i + 1}个按钮`)
       })
-    })
+    }
   </script>
 
 </body>
