--- a/02-JavaScript/02-JavaScript高级/10_ES6新特性/03_函数的默认参数.html
+++ b/02-JavaScript/02-JavaScript高级/10_ES6新特性/03_函数的默认参数.html
@@ -8,6 +8,24 @@
 </head>
 <body>
   <script>
+    // ES5 之前的写法
+    function bar(a, b) {
+      b = b ? b : 0
+      console.log(a, b)
+    }
+
+    bar(1) // 1 0
+    bar(1, 2) // 1 2
+
+    function baz(a, b) {
+      b = b || 0
+      console.log(a, b)
+    }
+
+    baz(1) // 1 0
+    baz(1, 2) // 1 2
+
+    // ES6 函数的默认值
     function foo(a, b = 2) {
       console.log(a, b)
     }
