: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/10_ES6新特性/03_函数的默认参数.html
+++ b/02-JavaScript/02-JavaScript高级/10_ES6新特性/03_函数的默认参数.html
@@ -14,7 +14,7 @@
       console.log(a, b)
     }
 
-    bar(1) // 1 '我是默认值'
+    bar(1, false) // 1 '我是默认值'
     bar(1, 2) // 1 2
 
     function baz(a, b) {
@@ -22,7 +22,7 @@
       console.log(a, b)
     }
 
-    baz(1) // 1 '我是默认值'
+    baz(1, 0) // 1 '我是默认值'
     baz(1, 2) // 1 2
 
     // ES6 函数的默认值
