--- a/02-JavaScript/02-JavaScript高级/10_ES6新特性/03_函数的默认参数.html
+++ b/02-JavaScript/02-JavaScript高级/10_ES6新特性/03_函数的默认参数.html
@@ -25,13 +25,27 @@
     baz(1, 0) // 1 '我是默认值'
     baz(1, 2) // 1 2
 
-    // ES6 函数的默认值
-    function foo(a, b = 2) {
+    // 上面的写法不严谨
+    function foo(a, b) {
+      b = (b === undefined || b === null) ? "我是默认值" : b
       console.log(a, b)
     }
 
-    foo(1) // 1 2
-    foo(1, 3) // 1 3
+    foo(1, false) // 1 false
+    foo(1, 2) // 1 2
+
+
+    // ES6+ 之后新增了 ??
+    function foo2(a, b) {
+      b = b ?? "我是默认值"
+      console.log(a, b)
+    }
+
+    foo2(1, false) // 1 false
+    foo2(1, undefined) // 1 '我是默认值'
+    foo2(1, null) // 1 '我是默认值'
+    foo2(1, 2) // 1 2
+
   </script>
 </body>
 </html>
