--- a/02-JavaScript/02-JavaScript高级/10_ES6新特性/12_Symbol的基本使用过程.html
+++ b/02-JavaScript/02-JavaScript高级/10_ES6新特性/12_Symbol的基本使用过程.html
@@ -8,7 +8,15 @@
 </head>
 <body>
   <script>
-    
+    // ES6 中引入 Symbol 来生成一个独一无二的值
+    const s1 = Symbol()
+    const s2 = Symbol()
+    const obj = {
+      [s1]: "张三",
+      [s2]: 18
+    }
+    console.log(s1 === s2) // false
+    console.log(obj)
   </script>
 </body>
 </html>
