--- a/02-JavaScript/02-JavaScript高级/10_ES6新特性/13_Symbol的基本使用过程.html
+++ b/02-JavaScript/02-JavaScript高级/10_ES6新特性/13_Symbol的基本使用过程.html
@@ -9,14 +9,14 @@
 <body>
   <script>
     // ES6 中引入 Symbol 来生成一个独一无二的值
-    const s1 = Symbol()
-    const s2 = Symbol()
+    const s1 = Symbol("name")
+    const s2 = Symbol("age")
     const obj = {
       [s1]: "张三",
       [s2]: 18
     }
     console.log(s1 === s2) // false
-    console.log(obj) // {Symbol(): '张三', Symbol(): 18}
+    console.log(obj) // {Symbol(name): '张三', Symbol(age): 18}
   </script>
 </body>
 </html>
