: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/11_ES6+新特性/02_字符串的填充方法.html
+++ b/02-JavaScript/02-JavaScript高级/11_ES6+新特性/02_字符串的填充方法.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <script>
+    /* 对时间进行格式化 */
     let minute = "5"
     let second = "6"
     let time = `${minute.padStart(2, "0")}：${second.padStart(2, "0")}`
