--- a/02-JavaScript/02-JavaScript高级/11_ES6+新特性/09_对象的相关方法.html
+++ b/02-JavaScript/02-JavaScript高级/11_ES6+新特性/09_对象的相关方法.html
@@ -11,7 +11,7 @@
     /* 将一个 URLSearchParams 对象转换为 Object 对象 */
     const searchString = "?name=x&age=18&height=1.8"
     const urlSearchParams = new URLSearchParams(searchString)
-    const SearchObj = Object.fromEntries(urlSearchParams)
+    const SearchObj = Object.fromEntries(urlSearchParams.entries())
     console.log(SearchObj) // {name: 'x', age: '18', height: '1.8'}
   </script>
 </body>
