--- a/02-JavaScript/02-JavaScript高级/12_Proxy和Reflect/07_Proxy 和 Reflect 共同完成代理.html
+++ b/02-JavaScript/02-JavaScript高级/12_Proxy和Reflect/07_Proxy 和 Reflect 共同完成代理.html
@@ -16,7 +16,7 @@
 
     const proxy = new Proxy(obj, {
       set(target, p, newValue, receiver) {
-        // 优点：① 不支持操作目标对象 ② Reflect.set 返回一个 boolean 值，用来判断本次操作是否成功
+        // 优点：① 不需要直接操作目标对象 ② Reflect.set 返回一个 boolean 值，用来判断本次操作是否成功
         const isSuccess = Reflect.set(target, p, newValue, receiver)
         if (!isSuccess) {
           throw new Error(`设置 ${key} 失败`)
