: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/13_Promise/01_异步代码的困境.html
+++ b/02-JavaScript/02-JavaScript高级/13_Promise/01_异步代码的困境.html
@@ -12,7 +12,7 @@
       // 异步任务
       setTimeout(() => {
         if (counter < 0) {
-          errorCallback(`${counter}不合法`)
+          errorCallback(`${counter}值不合法`)
         } else {
           let total = 0
           for (let i = 0; i <= counter; i++) {
