--- a/02-JavaScript/02-JavaScript高级/13_Promise/02_Promise解决异步代码的困境.html
+++ b/02-JavaScript/02-JavaScript高级/13_Promise/02_Promise解决异步代码的困境.html
@@ -27,10 +27,18 @@
       })
     }
 
-    execCode(-10).then((res) => {
-      console.log(res)
+    const promise1 = execCode(100)
+    promise1.then((res) => {
+      console.log(`成功的结果：${res}`)
     }).catch((err) => {
-      console.log(err)
+      console.log(`失败的结果：${err}`)
+    })
+
+    const promise2 = execCode(-100)
+    promise2.then((res) => {
+      console.log(`成功的结果：${res}`)
+    }).catch((err) => {
+      console.log(`失败的结果：${err}`)
     })
 
 
