--- a/02-JavaScript/02-JavaScript高级/13_Promise/03_Promise解决异步代码的困境.html
+++ b/02-JavaScript/02-JavaScript高级/13_Promise/03_Promise解决异步代码的困境.html
@@ -9,20 +9,20 @@
 <body>
   <script>
     new Promise((resolve, reject) => {
-      setTimeout(() => {
+      setTimeout(() => { // 模拟网络请求
         resolve(1)
       }, 1000)
     }).then((res) => {
       console.log(res)
       return new Promise((resolve, reject) => {
-        setTimeout(() => {
+        setTimeout(() => {  // 模拟网络请求
           resolve(2)
         }, 2000)
       })
     }).then(res => {
       return new Promise((resolve, reject) => {
         console.log(res)
-        setTimeout(() => {
+        setTimeout(() => {  // 模拟网络请求
           resolve(3)
         }, 3000)
       })
