--- a/02-JavaScript/02-JavaScript高级/13_Promise/09_Promise 实例的 catch 方法多次调用.html
+++ b/02-JavaScript/02-JavaScript高级/13_Promise/09_Promise 实例的 catch 方法多次调用.html
@@ -12,10 +12,12 @@
       reject(1)
     })
 
+    promise.catch(err => console.log(err))
+
     promise.then(res => {
       console.log('then成功的回调', res)
     }, err => {
-      console.log('then失败的回调', err)
+      console.log('then失败的回调', err) // then失败的回调 1
     })
   </script>
 </body>
