--- a/02-JavaScript/02-JavaScript高级/13_Promise/09_Promise 实例的 then 方法多次调用.html
+++ b/02-JavaScript/02-JavaScript高级/13_Promise/09_Promise 实例的 then 方法多次调用.html
@@ -9,19 +9,20 @@
 <body>
   <script>
     const promise = new Promise((resolve, reject) => {
-      reject(1)
+      resolve(1)
+    })
+
+
+    promise.then(res => {
+      console.log('then成功的回调', res) // then成功的回调 1
+    }, err => {
+      console.log('then失败的回调', err)
     })
 
     promise.then(res => {
-      console.log('then成功的回调', res)
+      console.log('then成功的回调', res) // then成功的回调 1
     }, err => {
-      console.log('then失败的回调', err) // then失败的回调 1
-    })
-
-    promise.then(res => {
-      console.log('then成功的回调', res)
-    }, err => {
-      console.log('then失败的回调', err) // then失败的回调 1
+      console.log('then失败的回调', err)
     })
   </script>
 </body>
