--- a/02-JavaScript/02-JavaScript高级/13_Promise/10_Promise 实例的 catch 方法多次调用.html
+++ b/02-JavaScript/02-JavaScript高级/13_Promise/10_Promise 实例的 catch 方法多次调用.html
@@ -12,7 +12,7 @@
       reject(1)
     })
 
-    promise.catch(err => console.log(err))
+    promise.catch(err => console.log(err)) // 1
 
     promise.then(res => {
       console.log('then成功的回调', res)
