--- a/02-JavaScript/02-JavaScript高级/13_Promise/05_Promise的resolve的值.html
+++ b/02-JavaScript/02-JavaScript高级/13_Promise/05_Promise的resolve的值.html
@@ -15,6 +15,8 @@
       resolve([1, 2, 3])
     })
 
+    console.log(promise.state())
+
     promise.then(res => {
       console.log(typeof res) // [1, 2, 3]
     }).catch(err => {
