--- a/02-JavaScript/02-JavaScript高级/13_Promise/13_Promise实例的then方法的返回值.html
+++ b/02-JavaScript/02-JavaScript高级/13_Promise/13_Promise实例的then方法的返回值.html
@@ -16,8 +16,12 @@
 
     promise.then(res => {
       console.log('第一个then方法', res) // 第一个then方法 success
+      return {
+        name: "tom",
+        age: 18
+      }
     }).then(res => {
-      console.log('第二个then方法', res) // 第二个then方法 undefined
+      console.log('第二个then方法', res) // 第二个then方法 {name: 'tom', age: 18}
     }).then(res => {
       console.log('第三个then方法', res) // 第三个then方法 undefined
     }).then(res => {
