--- a/02-JavaScript/02-JavaScript高级/13_Promise/14_Promise实例的then方法的返回值.html
+++ b/02-JavaScript/02-JavaScript高级/13_Promise/14_Promise实例的then方法的返回值.html
@@ -16,14 +16,15 @@
 
     promise.then(res => {
       console.log('第一个then方法', res) // 第一个then方法 success
+      throw new Error("1")
     }).then(res => {
-      console.log('第二个then方法', res) // 第二个then方法 undefined
+      console.log('第二个then方法', res)
     }).then(res => {
-      console.log('第三个then方法', res) // 第三个then方法 undefined
+      console.log('第三个then方法', res)
     }).then(res => {
-      console.log('第四个then方法', res) // 第四个then方法 undefined
+      console.log('第四个then方法', res)
     }).catch(err => {
-      console.log("catch", err)
+      console.log("catch", err.message) // catch 1
     })
 
   </script>
