: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/14_迭代器和生成器/05_迭代器遍历数组.html
+++ b/02-JavaScript/02-JavaScript高级/14_迭代器和生成器/05_迭代器遍历数组.html
@@ -30,7 +30,7 @@
       }
     }
 
-    // 将迭代器对象放到 Array 的显示原型对象上
+    // 将生成迭代器对象的函数放到 Array 的显示原型对象上
     Array.prototype.customIterator = function () {
       return createIterator(this)
     }
