--- a/02-JavaScript/02-JavaScript高级/14_迭代器和生成器/06_迭代器遍历数组.html
+++ b/02-JavaScript/02-JavaScript高级/14_迭代器和生成器/06_迭代器遍历数组.html
@@ -11,7 +11,7 @@
     const arr = [1, 2, 3]
     const names = ["张三", "李四", "王五", "赵六"]
 
-    // 将迭代器对象放到 Array 的显示原型对象上
+    // 将生成迭代器对象的函数放到 Array 的显示原型对象上
     Array.prototype.customIterator = function () {
       let index = 0;
       return {
