: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/14_迭代器和生成器/07_可迭代对象.html
+++ b/02-JavaScript/02-JavaScript高级/14_迭代器和生成器/07_可迭代对象.html
@@ -13,7 +13,7 @@
       friends: ["张三", "李四", "王五"]
     }
 
-    // 给 infos 创建一个迭代器，迭代 infos 中的 friends
+    // 给 infos 创建一个迭代器，用于迭代 infos 中的 friends
     let index = 0
     const arrIterator = {
       next: function () {
