: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/14_迭代器和生成器/12_自定义类的可迭代对象.html
+++ b/02-JavaScript/02-JavaScript高级/14_迭代器和生成器/12_自定义类的可迭代对象.html
@@ -8,6 +8,10 @@
 </head>
 <body>
   <script>
+    /**
+     * 判断一个对象是否是可迭代对象
+     * @param {Person} obj
+     */
     function isIterable(obj) {
       // 检查 null 和 undefined
       if (obj == null) {
