: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/14_迭代器和生成器/12_自定义类的可迭代对象.html
+++ b/02-JavaScript/02-JavaScript高级/14_迭代器和生成器/12_自定义类的可迭代对象.html
@@ -32,7 +32,7 @@
       [Symbol.iterator]() {
         const entries = Object.entries(this)
         let index = 0
-        const iterator = {
+        return {
           next: function () {
             if (index < entries.length) {
               return {
@@ -46,7 +46,6 @@
             }
           }
         }
-        return iterator
       }
     }
 
