: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/15_生成器/01_生成器函数的基本使用.html
+++ b/02-JavaScript/02-JavaScript高级/15_生成器/01_生成器函数的基本使用.html
@@ -26,6 +26,7 @@
       console.log("6666666")
     }
 
+    // 调用生成器函数，返回一个生成器对象
     const generator = foo()
     generator.next()
     generator.next()
