: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/15_生成器/02_生成器函数的next函数.html
+++ b/02-JavaScript/02-JavaScript高级/15_生成器/02_生成器函数的next函数.html
@@ -28,10 +28,9 @@
 
     // 调用生成器函数，返回一个生成器对象
     const generator = foo()
-    generator.next()
-    generator.next()
-    generator.next()
-    generator.next()
+    console.log(generator.next()) // {value: undefined, done: false}
+    console.log(generator.next()) // {value: undefined, done: false}
+    console.log(generator.next()) // {value: undefined, done: true}
   </script>
 </body>
 </html>
