--- a/02-JavaScript/02-JavaScript高级/16_异步处理方案/02_异步请求代码结构的优化.html
+++ b/02-JavaScript/02-JavaScript高级/16_异步处理方案/02_异步请求代码结构的优化.html
@@ -17,9 +17,9 @@
     }
 
     /* 需求：依次发送多次请求 */
-    function* getData(url) {
+    function* getData() {
       try {
-        const res1 = yield requestDate(url)
+        const res1 = yield requestDate("a")
         console.log(`getData第一次请求的结果：${res1}`)
         const res2 = yield requestDate(`${res1}` + "b")
         console.log(`getData第二次请求的结果：${res2}`)
@@ -30,7 +30,7 @@
       }
     }
 
-    const generator = getData("a")
+    const generator = getData()
     generator.next().value.then(res1 => {
       generator.next(res1).value.then(res2 => {
         generator.next(res2).value.then(res3 => {
