--- a/02-JavaScript/02-JavaScript高级/16_异步处理方案/04_异步请求代码结构的优化.html
+++ b/02-JavaScript/02-JavaScript高级/16_异步处理方案/04_异步请求代码结构的优化.html
@@ -17,22 +17,27 @@
     }
 
     /* 需求：依次发送多次请求 */
-    async function getData() {
+    function* getData() {
       try {
-        const res1 = await requestDate("a")
+        const res1 = yield requestDate("a")
         console.log(`getData第一次请求的结果：${res1}`)
-        const res2 = await requestDate(`${res1}` + "b")
+        const res2 = yield requestDate(`${res1}` + "b")
         console.log(`getData第二次请求的结果：${res2}`)
-        const res3 = await requestDate(`${res2}` + "c")
+        const res3 = yield requestDate(`${res2}` + "c")
         console.log(`getData第三次请求的结果：${res3}`)
       } catch (e) {
         console.log(`请求中出现的错误信息：${e}`)
       }
     }
 
-    const generator = getData()
-    console.log(generator)
-
+    const generator = getData("a")
+    generator.next().value.then(res1 => {
+      generator.next(res1).value.then(res2 => {
+        generator.next(res2).value.then(res3 => {
+          generator.next(res3)
+        })
+      })
+    })
 
   </script>
 </body>
