: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/17_异步async和await/06_异步函数中的await关键字.html
+++ b/02-JavaScript/02-JavaScript高级/17_异步async和await/06_异步函数中的await关键字.html
@@ -23,6 +23,7 @@
       const result = await 123
       console.log(result)
       console.log("###################")
+      // await 后面如果是 Promise 对象，那么会等待 Promise 对象的状态变为 fulfilled 之后，才会继续执行
       const res = await bar()
       console.log(res)
       return "aaa"
