--- a/02-JavaScript/02-JavaScript高级/20_防抖和节流/10_手动实现节流_立即执行控制.html
+++ b/02-JavaScript/02-JavaScript高级/20_防抖和节流/10_手动实现节流_立即执行控制.html
@@ -23,8 +23,13 @@
       const _throttle = function (...args) {
         // 当前时间
         let nowTime = new Date().getTime()
+        // 对立即执行进行控制
+        if (!immediate && startTime === 0) {
+          startTime = nowTime
+        }
         // 等待时间
         let waitTime = interval - (nowTime - startTime)
+        // 如果等待的时间 小于 0
         if (waitTime <= 0) {
           // 执行函数
           fn.apply(this, args)
@@ -42,7 +47,7 @@
     let counter = 1
     inputEl.addEventListener("input", throttle(function () {
       console.log(`发送网络请求${counter++}`, this.value)
-    }, 1000))
+    }, 1000, false))
   </script>
 </body>
 </html>
