: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/21_网络编程/01_网络请求.html
+++ b/02-JavaScript/02-JavaScript高级/21_网络编程/01_网络请求.html
@@ -17,7 +17,7 @@
       }
     }
     // ③ 配置网络请求
-    xhr.open('GET', 'https://www.baidu.com')
+    xhr.open('GET', 'http://123.207.32.32:8000/home/multidata')
     // ④ 发送网络请求
     xhr.send()
   </script>
