: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/21_网络编程/01_网络请求.html
+++ b/02-JavaScript/02-JavaScript高级/21_网络编程/01_网络请求.html
@@ -14,6 +14,9 @@
     xhr.onreadystatechange = function () {
       if (xhr.readyState === 4 && xhr.status === 200) {
         console.log(xhr.responseText)
+
+        const json = JSON.parse(xhr.responseText)
+        console.log(json)
       }
     }
     // ③ 配置网络请求
