--- a/02-JavaScript/02-JavaScript高级/21_网络编程/11_网络请求--取消请求.html
+++ b/02-JavaScript/02-JavaScript高级/21_网络编程/11_网络请求--取消请求.html
@@ -7,7 +7,10 @@
   <title>Title</title>
 </head>
 <body>
+  <button>取消请求</button>
   <script>
+    const btn = document.querySelector("button")
+
     // ① 创建 XMLHttpRequest 对象
     const xhr = new XMLHttpRequest()
     // ② 监听 XMLHttpRequest 对象状态的变化
@@ -23,11 +26,16 @@
     // ③ 告知 xhr 获取数据的类型
     xhr.responseType = 'json'
     // ④ 设置过期时间，即浏览器达到过期时间还没有获取到对应的结果时，取消本次请求
-    xhr.timeout = 10
+    xhr.timeout = 10000
     // ⑤ 配置网络请求
     xhr.open('GET', 'http://123.207.32.32:1888/01_basic/timeout')
     // ⑥ 发送网络请求
     xhr.send()
+
+    btn.addEventListener("click", function () {
+      // 手动取消请求
+      xhr.abort()
+    })
   </script>
 </body>
 </html>
