: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/21_网络编程/15_网络请求--文件上传.html
+++ b/02-JavaScript/02-JavaScript高级/21_网络编程/15_网络请求--文件上传.html
@@ -29,7 +29,7 @@
       const formData = new FormData()
       const fileEl = document.querySelector(".file")
       console.dir(fileEl.files)
-      formData.append('file', fileEl.files[0])
+      formData.append('avatar', fileEl.files[0])
       // 发送网络请求
       xhr.send(formData)
     })
