: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/21_网络编程/15_网络请求--文件上传.html
+++ b/02-JavaScript/02-JavaScript高级/21_网络编程/15_网络请求--文件上传.html
@@ -22,6 +22,15 @@
           console.log(xhr.response)
         }
       }
+      // 监听上传进度
+      xhr.upload.onprogress = function (event) {
+        if (event.lengthComputable) {
+          // 计算出上传进度。
+          let progress = ((event.loaded / event.total) * 100).toFixed(2) + "%";
+          // 更新进度条。
+          console.log('上传进度', progress)
+        }
+      }
       // 告知 xhr 获取数据的类型
       xhr.responseType = 'json'
       // 配置网络请求
