--- a/02-JavaScript/02-JavaScript高级/20_防抖和节流/11_手动实现节流_尾部执行控制.html
+++ b/02-JavaScript/02-JavaScript高级/20_防抖和节流/11_手动实现节流_尾部执行控制.html
@@ -21,6 +21,8 @@
     function throttle(fn, interval, leading = true, trailing = false) {
       // 开始时间
       let startTime = 0
+
+      let timer = null
       const _throttle = function (...args) {
         // 当前时间
         let nowTime = new Date().getTime()
@@ -32,11 +34,28 @@
         let waitTime = interval - (nowTime - startTime)
         // 如果等待的时间 小于 0
         if (waitTime <= 0) {
+          if (timer) {
+            clearTimeout(timer)
+          }
           // 执行函数
           fn.apply(this, args)
           // 重置当前时间
           startTime = nowTime
+          // 重置
+          timer = null
+          return
         }
+        // 是否需要执行尾部
+        if (trailing && !timer) {
+          timer = setTimeout(() => {
+            fn.apply(this, args)
+            // 重置当前时间
+            startTime = nowTime
+            // 重置
+            timer = null
+          }, waitTime)
+        }
+
       }
       return _throttle
     }
