: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/21_深拷贝和事件总线/01_深拷贝-数组拷贝.html
+++ b/02-JavaScript/02-JavaScript高级/21_深拷贝和事件总线/01_深拷贝-数组拷贝.html
@@ -10,7 +10,9 @@
 
   <script>
     const books = [
-      {name: 'Java从入门到入土', price: 99.00},
+      {
+        name: 'Java从入门到入土', price: 99.00, desc: {info: '什么啊'}
+      },
       {name: 'JavaScript从入门到入坟', price: 10.00},
     ]
 
